force-app/main/default/objects/Member_Benefit__c/Member_Benefit__c.object-meta.xml
<CustomObject>
    <label>Member Benefit</label>
    <nameField>
        <displayFormat>MB-{00000}</displayFormat>
        <label>Member Benefit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>