force-app/main/default/objects/Member_Benefit__c/fields/Activation_Validity_Expired_Today__c.field-meta.xml
<CustomField>
    <fullName>Activation_Validity_Expired_Today__c</fullName>
    <formula>Activation_Validity_Expiry_Date__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Validity Expired Today</label>
    <type>Checkbox</type>
</CustomField>