force-app/main/default/objects/Member_Benefit__c/fields/Activation_Validity_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Validity_Expiry_Date__c</fullName>
    <label>Activation Validity Expiry Date</label>
    <type>Date</type>
</CustomField>