force-app/main/default/objects/Member_Benefit__c/fields/Active_Member_Benefit_Program__c.field-meta.xml
<CustomField>
    <fullName>Active_Member_Benefit_Program__c</fullName>
    <formula>Member_Benefit_Program__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Member Benefit Program</label>
    <type>Checkbox</type>
</CustomField>