force-app/main/default/objects/Member_Benefit__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Customer_Name__r.MailingStreet &amp; &quot; &quot; &amp; Customer_Name__r.MailingCity &amp; &quot; &quot; &amp; Customer_Name__r.MailingState &amp; &quot; &quot; &amp; Customer_Name__r.MailingPostalCode &amp; &quot; &quot; &amp; Customer_Name__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>