force-app/main/default/objects/Member_Benefit__c/fields/Benefit_Activated__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefit Activated</label>
    <type>Checkbox</type>
</CustomField>