force-app/main/default/objects/Member_Benefit__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Member Benefits</relationshipLabel>
    <relationshipName>Member_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>