force-app/main/default/objects/Member_Benefit__c/fields/Gift_Card_Issued__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Card Issued</label>
    <type>Checkbox</type>
</CustomField>