force-app/main/default/objects/Member_Benefit__c/fields/Gift_Card_Provider_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Provider_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>