force-app/main/default/objects/Member_Benefit__c/fields/Gift_Card_Provider_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Provider_Order_Number__c</fullName>
    <description>Mapped to Blackhawk&apos;s Order Number response</description>
    <label>Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>