force-app/main/default/objects/Member_Benefit__c/fields/Gift_Card_Provider_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Provider_Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>