force-app/main/default/objects/Member_Benefit__c/fields/Gift_Card_Request_Counter__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Request_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Request Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>