force-app/main/default/objects/Member_Benefit__c/fields/Gift_Card_URL__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_URL__c</fullName>
    <label>Gift Card URL</label>
    <type>Url</type>
</CustomField>