force-app/main/default/objects/Member_Benefit__c/fields/Manual_Activation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Activation_Reason__c</fullName>
    <label>Manual Activation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email not received</fullName>
            </value>
            <value>
                <fullName>Email link not working</fullName>
            </value>
            <value>
                <fullName>Technical issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>