force-app/main/default/objects/Member_Benefit__c/fields/Member_Benefit_Program__c.field-meta.xml
<CustomField>
    <fullName>Member_Benefit_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Benefit Program</label>
    <referenceTo>Member_Benefit_Program__c</referenceTo>
    <relationshipLabel>Member Benefits</relationshipLabel>
    <relationshipName>Member_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>