force-app/main/default/objects/Member_Benefit__c/fields/Member_Benefit_UUID__c.field-meta.xml
<CustomField>
    <fullName>Member_Benefit_UUID__c</fullName>
    <externalId>true</externalId>
    <label>Member Benefit UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>