force-app/main/default/objects/Member_Benefit__c/fields/Ready_for_MC__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for MC</label>
    <type>Checkbox</type>
</CustomField>