force-app/main/default/objects/Member_Benefit__c/fields/Registered_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Registered_Product_Code__c</fullName>
    <label>Registered Product Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>