force-app/main/default/objects/Member_Benefit__c/fields/Registered_Products__c.field-meta.xml
<CustomField>
    <fullName>Registered_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Products</label>
    <referenceTo>Eligible_Products__c</referenceTo>
    <relationshipLabel>Member Benefits (Registered Products)</relationshipLabel>
    <relationshipName>Member_Benefits1</relationshipName>
    <type>Lookup</type>
</CustomField>