force-app/main/default/objects/Member_Benefit__c/fields/Registered_Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Tool_Name__c</fullName>
    <label>Registered Tool Name</label>
    <type>TextArea</type>
</CustomField>