force-app/main/default/objects/Member_Benefit__c/fields/Registered_Tool_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Tool_Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>