force-app/main/default/objects/Member_Benefit__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplication</fullName>
            </value>
            <value>
                <fullName>Incorrect Receipt</fullName>
            </value>
            <value>
                <fullName>Incorrect Product</fullName>
            </value>
            <value>
                <fullName>Unable to verify</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reason 1</fullName>
                <isActive>false</isActive>
                <label>Reason 1</label>
            </value>
            <value>
                <fullName>Reason 2</fullName>
                <isActive>false</isActive>
                <label>Reason 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>