force-app/main/default/objects/Member_Benefit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Further Information Required</fullName>
            </value>
            <value>
                <fullName>Approved - Awaiting Activation</fullName>
            </value>
            <value>
                <fullName>Approved - Activated</fullName>
            </value>
            <value>
                <fullName>Approved - Gift Card Platform Success</fullName>
            </value>
            <value>
                <fullName>Approved - Gift Card Platform Error</fullName>
            </value>
            <value>
                <fullName>Approved - Gift Card Issued</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>