force-app/main/default/objects/Member_Benefit__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <formula>Member_Benefit_Program__r.Terms_and_Conditions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms and Conditions</label>
    <type>Text</type>
</CustomField>