force-app/main/default/objects/Member_Benefit__c/validationRules/Prevent_Direct_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Direct_Activation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(PRIORVALUE(Status__c),&apos;Submitted&apos;),
        ISPICKVAL(PRIORVALUE(Status__c),&apos;Further Information Required&apos;)
    ),
    ISPICKVAL(Status__c ,&apos;Approved - Activated&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select Approved - Awaiting Activation.</errorMessage>
</ValidationRule>