force-app/main/default/objects/Member_Benefit__c/validationRules/Require_Manual_Activation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Manual_Activation_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(Manual_Activation_Reason__c)), ISPICKVAL( Status__c , &apos;Approved - Activated&apos;), CONTAINS($Profile.Name, &apos;~ Customer Service&apos;))</errorConditionFormula>
    <errorDisplayField>Manual_Activation_Reason__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>