force-app/main/default/objects/Member_Benefit__c/validationRules/Require_Rejected_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Rejected_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c,&apos;Rejected&apos;),
 ISBLANK(TEXT(Rejected_Reason__c))  
)</errorConditionFormula>
    <errorDisplayField>Rejected_Reason__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>