force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
  ISPICKVAL(PRIORVALUE(Status__c),&apos;Approved - Awaiting Activation&apos;),
  ISPICKVAL(PRIORVALUE(Status__c),&apos;Approved - Activated&apos;),
  ISPICKVAL(PRIORVALUE(Status__c),&apos;Approved - Gift Card Platform Success&apos;),
  ISPICKVAL(PRIORVALUE(Status__c),&apos;Approved - Gift Card Platform Error&apos;),
  ISPICKVAL(PRIORVALUE(Status__c),&apos;Approved - Gift Card Issued&apos;),
  ISPICKVAL(PRIORVALUE(Status__c),&apos;Approved - Gift Card Pending Request&apos;)
 ),
 OR(
   ISPICKVAL(Status__c , &apos;Submitted&apos;),
   ISPICKVAL(Status__c , &apos;Further Information Required&apos;),
   ISPICKVAL(Status__c , &apos;Rejected&apos;)
 )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot select this status once approved</errorMessage>
</ValidationRule>