force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Awaiting_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Awaiting_Activation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( PRIORVALUE( Status__c ) , &apos;Approved - Awaiting Activation&apos;),
  NOT( ISPICKVAL( Status__c , &apos;Approved - Activated&apos;)), NOT( ISPICKVAL( Status__c , &apos;Approved - Gift Card Pending Request&apos;)) 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Can only select Approved - Activated</errorMessage>
</ValidationRule>