force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Further_Info_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Further_Info_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( PRIORVALUE( Status__c ) , &apos;Further Information Required&apos;),
  OR(
     ISPICKVAL( Status__c , &apos;Submitted&apos;),
     ISPICKVAL( Status__c , &apos;Approved - Activated&apos;),
     ISPICKVAL( Status__c , &apos;Approved - Gift Card Platform Success&apos;),
     ISPICKVAL( Status__c , &apos;Approved - Gift Card Platform Error&apos;),
     ISPICKVAL( Status__c , &apos;Approved - Gift Card Issued&apos;)
  )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Can only select Approved - Awaiting Activation or Rejected</errorMessage>
</ValidationRule>