force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Gift_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Gift_Card</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(PRIORVALUE( Status__c ), &apos;Approved - Gift Card Platform Success&apos;),
ISPICKVAL(PRIORVALUE( Status__c ), &apos;Approved - Gift Card Platform Error&apos;),
ISPICKVAL(PRIORVALUE( Status__c ), &apos;Approved - Gift Card Pending Request&apos;)
)
,
OR(
ISPICKVAL( Status__c , &apos;Approved - Awaiting Activation&apos;),
ISPICKVAL( Status__c , &apos;Approved - Activated&apos;)
)

)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Link already activated. Check your email for the Gift Card.</errorMessage>
</ValidationRule>