force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Gift_Card_Issued.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Gift_Card_Issued</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( PRIORVALUE( Status__c ) , &apos;Approved - Gift Card Issued&apos;),
ISCHANGED( Status__c )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Gift card already issued. Check the My Incentives tab in MY RYOBI to access your card</errorMessage>
</ValidationRule>