force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Pending</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( PRIORVALUE( Status__c ) , &apos;Approved - Gift Card Pending Request&apos;),
    ISCHANGED( Status__c ),
    AND(NOT(ISPICKVAL(  Status__c  , &apos;Approved - Gift Card Platform Success&apos;)),
    NOT(ISPICKVAL(  Status__c  , &apos;Approved - Gift Card Platform Error&apos;)))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be updated due to pending gift card request</errorMessage>
</ValidationRule>