force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( PRIORVALUE( Status__c ) , &apos;Rejected&apos;),
  ISCHANGED( Status__c )  
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be updated</errorMessage>
</ValidationRule>