force-app/main/default/objects/Member_Benefit__c/validationRules/Status_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(PRIORVALUE( Status__c ), &apos;Submitted&apos;),
 OR(
  ISPICKVAL( Status__c , &apos;Approved - Activated&apos;),
  ISPICKVAL( Status__c , &apos;Approved - Gift Card Platform Success&apos;),
  ISPICKVAL( Status__c , &apos;Approved - Gift Card Platform Error&apos;),
  ISPICKVAL( Status__c , &apos;Approved - Gift Card Issued&apos;)
 )

)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Can only select Further Information Required, Approved - Awaiting Activation or Rejected</errorMessage>
</ValidationRule>