force-app/main/default/objects/Member_Benefit__c/listViews/Activated.listView-meta.xml
<ListView>
    <fullName>Activated</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status2__c</field>
        <operation>contains</operation>
        <value>Activated</value>
    </filters>
    <label>Activated</label>
</ListView>