force-app/main/default/objects/Member_Benefit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>Brand__c</columns>
    <columns>Registered_Tool_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>