force-app/main/default/objects/Member_Benefit__c/listViews/Approved_Awaiting_Activation.listView-meta.xml
<ListView>
    <fullName>Approved_Awaiting_Activation</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved - Awaiting Activation</value>
    </filters>
    <label>Approved - Awaiting Activation</label>
</ListView>