force-app/main/default/objects/Member_Benefit__c/listViews/Further_Information_Required.listView-meta.xml
<ListView>
    <fullName>Further_Information_Required</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Further Information Required</value>
    </filters>
    <label>Further Information Required</label>
</ListView>