force-app/main/default/objects/Member_Benefit__c/listViews/Gift_Card_Issued.listView-meta.xml
<ListView>
    <fullName>Gift_Card_Issued</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status2__c</field>
        <operation>contains</operation>
        <value>Approved - Gift Card Issued</value>
    </filters>
    <label>Gift Card Issued</label>
</ListView>