force-app/main/default/objects/Member_Benefit__c/listViews/Platform_Error.listView-meta.xml
<ListView>
    <fullName>Platform_Error</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>Gift_Card_Request_Counter__c</columns>
    <columns>Gift_Card_Provider_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status2__c</field>
        <operation>contains</operation>
        <value>Platform Error</value>
    </filters>
    <label>Platform Error</label>
</ListView>