force-app/main/default/objects/Member_Benefit__c/listViews/Platform_Success.listView-meta.xml
<ListView>
    <fullName>Platform_Success</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status2__c</field>
        <operation>contains</operation>
        <value>Platform Success</value>
    </filters>
    <label>Platform Success</label>
</ListView>