force-app/main/default/objects/Member_Benefit__c/listViews/Rejected.listView-meta.xml
<ListView>
    <fullName>Rejected</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Member_Benefit_Program__c</columns>
    <columns>Status__c</columns>
    <columns>Rejected_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status2__c</field>
        <operation>contains</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected</label>
</ListView>